# QuickGas

./: CMakeLists.txt  VideoFrameChild.qml  custom_video_surface.cpp  frame_provider.cpp  frame_provider.h  gas_enhance_dlg.qml  iso_dlg.qml  ls_dlg.qml  main.cpp  main.qml  param_dlg.qml  producer.cpp  producer.h  qml.qrc  quick_item.qml  rtsp_decode.cpp  rtsp_decode.h  settings_dlg.qml  video_dlg.h  video_frame_child.qml
custom_qml/: DeviceManage.qml  QuantitativeAnalysis.qml
src/: circular_queue.cpp  circular_queue.h  circular_queue.hpp  frame_provider.cpp  frame_provider.h  frame_provider_ctrl.cpp  frame_provider_ctrl.h  rtsp_decode.cpp  rtsp_decode.h  video_queue.cpp  video_queue.h
